# marketing-segmentation-poc

./: .env.example  .env.test  .gitignore  README.md  docker-compose.yml  generate_synthetic_data.py  main.py  models.py  openai_client.py  pyproject.toml  pytest.ini  redshift_client.py  requirements.txt  schemas.sql  seed_synthetic.sql
.github/workflows/: python-package.yml
sql/: generate_synthetic_data.py  seed_synthetic.sql
src/: models.py  openai_client.py  redshift_client.py
tests/: conftest.py  test_audience.py  test_schema.py  test_segment.py
